# dcadec

./: .gitignore  CMakeLists.txt  dcadec.pc.in
cmake/: CMakeLists.txt
